# online-status

./: CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/workflows/: build-windows.yml
data/locale/: en-US.ini
src/: button-source.c  example.cpp  online-status.cpp  online_status.hpp  online_status_properties.cpp  plugin-main.c
